@@ -1,3 +1,8 @@
+2001-11-21 Vince Darley <vincentdarley@sourceforge.net>
+	* generic/vfs.c: added more comments to the code, and 
+	made mount point checking faster and simpler (we no longer
+	need to modify strings temporarily).
+	
 2001-11-09 Vince Darley <vincentdarley@sourceforge.net>
 	* tests/vfs*.test: better tests; more platform independent.
 
